# MUNGE src/libtap/Makefile.am
#
# This file is part of the MUNGE Uid 'N' Gid Emporium (MUNGE).
# For details, see <https://dun.github.io/munge/>.

include $(top_srcdir)/Make-inc.mk

check_LTLIBRARIES = \
	libtap.la \
	# End of check_LTLIBRARIES

libtap_la_CFLAGS = \
	-D_BSD_SOURCE \
	# End of libtap_la_CFLAGS

libtap_la_SOURCES = \
	tap.c \
	tap.h \
	# End of libtap_la_SOURCES
